fixed issue #47 by aligning text in center (wtf)

--- a/_sass/_communities.scss
+++ b/_sass/_communities.scss
@@ -88,6 +88,7 @@
     color: #fff;
     font-size: 22px;
     font-weight: bold;
+    text-align: center;
   }
 
   .community-site {
